--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  fluent_ui: ^4.3.0
+  fluent_ui: ^4.6.1
   get: ^4.6.5
   gap: ^2.0.0
   introduction_slider: ^2.0.0
@@ -48,7 +48,7 @@ dependencies:
   data_table_2: ^2.3.10
   multiple_search_selection: ^2.3.2
   fl_chart: ^0.60.0
-  intl: ^0.17.0
+  intl: ^0.18.0
   draw_graph: ^1.0.0
   syncfusion_flutter_charts: ^20.4.50
   custom_radio_grouped_button: ^2.2.0
@@ -57,6 +57,8 @@ dependencies:
   easy_stepper: ^0.3.2
   readmore: ^2.2.0
   flutter_speed_dial: ^6.2.0
+  dio: ^5.3.2
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
